[package]
name = "uira-context"
description = "Context management for Uira AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uira-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }
