[package]
name = "uira-events"
description = "Event bus system for Uira agent harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
async-trait = "0.1"
parking_lot = "0.12"

# Internal dependencies
uira-protocol = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
